<resources>
    <string name="app_name">3dModel</string>
    <string name="tab_3d_plain">3D Plain</string>
    <string name="tab_main">Main</string>
    <string name="tab_photos">Photos</string>
    <string name="draw">Draw</string>
    <string name="dummy_button">Reset View</string>
    <string name="exit">Exit</string>
    <string name="instructions">To rotate: Drag finger across screen \n To scale: move two fingers towards or away each other.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="new_memory_title_hint">Add Title</string>
    <string name="new_memory_btn_cancel">Cancel</string>
    <string name="new_memory_btn_save">Save</string>
    <string name="activity_main_empty_view_text">Create your first photo with camera or add them from gallery.</string>
    <string name="new_memory_btn_gallery">Add a photo from gallery</string>
    <string name="new_memory_btn_camera">Add a photo from camera</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="delete">Delete</string>
    <string name="build_3d_model">Build 3D model</string>
    <string name="new_project">New project</string>
    <string name="DefaultDate">01.01.2022</string>
    <string name="project_name">Project Name</string>
    <string name="dialog_save_project">Save Project</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete_option">delete</string>
    <string name="draw_option">draw</string>
    <string name="dialog_save_model">Create Model</string>
    <string name="model_name">Model Name</string>
    <string name="submit">Submit</string>
    <string name="save_">SAVE</string>
</resources>